--- a/deal/WebContent/res/topNside/css/custom.css
+++ b/deal/WebContent/res/topNside/css/custom.css
@@ -4432,6 +4432,34 @@ img.avatar {
     border: 1px solid #e6e6e6;
 }
 
+img.mydealavatar{
+    height: 120px;
+    width: 120px;
+    float: left;
+    display: inline-block;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
+    padding: 2px;
+    margin-right: 10px;
+    background: #f7f7f7;
+    border: 1px solid #e6e6e6;
+}
+
+img.mydealavatar2{
+    height: 80px;
+    width: 80px;
+    float: left;
+    display: inline-block;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
+    padding: 2px;
+    margin-right: 10px;
+    background: #f7f7f7;
+    border: 1px solid #e6e6e6;
+}
+
 ul.messages li .message_date {
     float: right;
     text-align: right;
@@ -5491,7 +5519,7 @@ ul.project_files li a i {
 }
 
 .progress.progress_sm .progress-bar {
-    height: 10px !important;
+    height: 15px !important;
 }
 
 .dashboard_graph p {
@@ -6342,4 +6370,10 @@ ul.notifications {
     color: #E9EDEF;
     float: right;
     opacity: 1;
+}
+
+.zzim{
+	background: #003399;
+	color:#ffffff;
+	padding:2px;
 }
