--- a/deal/WebContent/res/topNside/css/custom.css
+++ b/deal/WebContent/res/topNside/css/custom.css
@@ -4460,6 +4460,19 @@ img.mydealavatar2{
     border: 1px solid #e6e6e6;
 }
 
+img.mydealavatar3{
+    height: 400px;
+    width: 400px;
+    float: left;
+    display: inline-block;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
+    padding: 2px;
+    
+    background: #f7f7f7;
+    border: 1px solid #e6e6e6;
+}
 ul.messages li .message_date {
     float: right;
     text-align: right;
@@ -6376,4 +6389,29 @@ ul.notifications {
 	background: #003399;
 	color:#ffffff;
 	padding:2px;
+}
+
+.cam{
+	background: #EAEAEA;
+	color : #000000;
+	padding : 15px;
+}
+
+.upma{
+	margin: 20px;
+}
+
+.uptitle{
+	font-size: 15px;
+	font-weight: bold;
+}
+
+.dealchicga{
+	color:#DB0000;
+	font-size: 13px;
+	font-weight: bold;
+}
+
+.in_right{
+	text-align: right;
 }
