--- a/deal/WebContent/res/topNside/css/custom.css
+++ b/deal/WebContent/res/topNside/css/custom.css
@@ -884,10 +884,13 @@ li.current-page a {
 .x_content canvas {}
 
 footer {
-    background: #fff;
-    padding: 5px 20px 0;
-    height: 45px;
-    margin: 0 -17px;
+    width:100%;
+	height:30px;
+	margin:5px auto;
+	text-align:center;
+	background-color: #FFFFFF;
+	line-height: 30px;
+    border-top:1px solid #DAD9FF;
 }
 
 .tile-stats.sparkline {
