--- a/deal/WebContent/res/topNside/css/custom.css
+++ b/deal/WebContent/res/topNside/css/custom.css
@@ -887,7 +887,7 @@ footer {
     width:100%;
 	height:30px;
 	margin:5px auto;
-	text-align:center;
+	text-align:right;
 	background-color: #FFFFFF;
 	line-height: 30px;
     border-top:1px solid #DAD9FF;
