--- a/deal/WebContent/res/template/css/custom.css
+++ b/deal/WebContent/res/template/css/custom.css
@@ -41,16 +41,16 @@ body.nav-sm .main_container .top_nav {
 body.nav-sm .nav.side-menu li a {
     text-align: center !important;
     font-weight: 400;
-    font-size: 10px;
+    font-size: 13px;
     padding: 10px 5px;
 }
 
-body.nav-sm .nav.side-menu li.active-sm {
-    border-right: 5px solid #1ABB9C;
-}
+/* body.nav-sm .nav.side-menu li.active-sm {
+    border-right: 5px solid #e51b13;
+} */
 
 body.nav-sm > .nav.side-menu > li.active-sm > a {
-    color: #1ABB9C !important;
+    color: #e51b13 !important;
 }
 
 body.nav-sm .nav.side-menu li a i.toggle-up {
@@ -71,7 +71,7 @@ body.nav-sm ul.nav.child_menu {
     padding: 10px;
     width: 210px;
     z-index: 4000;
-    background: #3E5367;
+    background: white;
     display: none;
 }
 
@@ -168,7 +168,7 @@ body.nav-sm .profile {
     margin-top: 5px;
     font-size: 10px !important;
     min-width: inherit;
-    color: #C4CFDA;
+    color: white;
 }
 
 .active a span.fa {
@@ -190,7 +190,7 @@ body.nav-sm .menu_section h3 {
     /*background: #F4F6F9;
     border-bottom: 1px solid #E6E9ED;*/
     
-    background: #EDEDED;
+    background: white;
     border-bottom: 1px solid #D9DEE4;
     margin-bottom: 10px;
     width: 100%;
@@ -204,7 +204,7 @@ body.nav-md .container.body .col-md-3.left_col {
 }
 
 body .container.body .right_col {
-    background: #F7F7F7;
+    background: white;
 }
 
 body.nav-md .container.body .right_col {
@@ -269,7 +269,7 @@ purple,
 
 green,
 .green {
-    color: #1ABB9C;
+    color: #e51b13;
 }
 
 .aero {
@@ -295,7 +295,7 @@ dark,
 }
 
 .border-green {
-    border-color: #1ABB9C !important;
+    border-color: #e51b13 !important;
 }
 
 .border-aero {
@@ -317,14 +317,14 @@ dark,
 }
 
 .bg-green {
-    background: #1ABB9C !important;
-    border: 1px solid #1ABB9C !important;
+    background: #e51b13 !important;
+    border: 1px solid #e51b13 !important;
     color: #fff;
 }
 
 .bg-red {
-    background: #E74C3C !important;
-    border: 1px solid #E74C3C !important;
+    background: #e51b13 !important;
+    border: 1px solid #e51b13 !important;
     color: #fff;
 }
 
@@ -369,8 +369,8 @@ dark,
 }
 
 body {
-    color: #73879C;
-    background: #2A3F54;
+    color: black !important;
+    background: white;
     /*#ECF0F1; #FCFCFC*/
     
     font-family: "Helvetica Neue", Roboto, Arial, "Droid Sans", sans-serif;
@@ -677,7 +677,7 @@ a:focus {
 }
 
 .nav.side-menu> li > a:hover {
-    color: #F2F5F7 !important;
+    color: black !important;
 }
 
 .nav.side-menu>li>a:hover,
@@ -695,7 +695,7 @@ a:focus {
 }
 
 body.nav-md ul.nav.child_menu li:before {
-    background: #425668;
+    background: red;
     bottom: auto;
     content: "";
     height: 8px;
@@ -711,7 +711,7 @@ body.nav-md ul.nav.child_menu li:before {
 }
 
 body.nav-md ul.nav.child_menu li:after {
-    border-left: 1px solid #425668;
+    border-left: 1px solid red;
     bottom: 0;
     content: "";
     left: 27px;
@@ -721,7 +721,7 @@ body.nav-md ul.nav.child_menu li:after {
 
 .nav.side-menu>li>a,
 .nav.child_menu>li>a {
-    color: #E7E7E7 !important;
+    color: black !important;
     font-weight: 500;
 }
 
@@ -730,31 +730,31 @@ body.nav-md ul.nav.child_menu li:after {
     display: block;
     padding: 13px 15px 7px;
 }
-
+/* 
 .nav.side-menu> li.current-page,
 .nav.side-menu> li.active {
-    border-right: 5px solid #1ABB9C;
-}
+    border-right: 5px solid yellow;
+} */
 
 li.current-page {
     background: rgba(255, 255, 255, 0.05);
 }
 
 .nav.side-menu> li.active > a {
-    color: #ff0000;
-    text-shadow: rgba(0, 0, 0, 0.25) 0 -1px 0;
+    color: #e51b13;
+    text-shadow: none;
     background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #5b6479), color-stop(100%, #4c5566)), #686e78;
     background: -webkit-linear-gradient(#334556, #2C4257), #2A3F54;
     background: -moz-linear-gradient(#334556, #2C4257), #2A3F54;
     background: -o-linear-gradient(#334556, #2C4257), #2A3F54;
-    background: linear-gradient(#334556, #2C4257), #2A3F54;
+    background: #e51b13;
     -webkit-box-shadow: rgba(0, 0, 0, 0.25) 0 1px 0, inset rgba(255, 255, 255, 0.16) 0 1px 0;
     -moz-box-shadow: rgba(0, 0, 0, 0.25) 0 1px 0, inset rgba(255, 255, 255, 0.16) 0 1px 0;
     box-shadow: rgba(0, 0, 0, 0.25) 0 1px 0, inset rgba(255, 255, 255, 0.16) 0 1px 0;
 }
 
 li.current-page a {
-    color: #1ABB9C !important
+    color: #e51b13 !important
 }
 
 .navbar-brand,
@@ -844,7 +844,7 @@ li.current-page a {
 }
 
 .nav.child_menu > li > a {
-    color: rgba(255, 255, 255, 0.75) !important;
+    color: black;
     font-size: 12px;
     padding: 9px;
 }
@@ -3015,7 +3015,7 @@ select.parsley-error {
 }
 
 .daterangepicker.picker_1 table.table-condensed thead tr:first-child {
-    background: #1ABB9C;
+    background: #e51b13;
 }
 
 .daterangepicker table.table-condensed thead tr:first-child th {
@@ -3064,11 +3064,11 @@ select.parsley-error {
 }
 
 .daterangepicker.picker_2 table.table-condensed thead tr {
-    color: #1ABB9C;
+    color: #e51b13;
 }
 
 .daterangepicker.picker_3 table.table-condensed thead tr:first-child {
-    background: #1ABB9C;
+    background: #e51b13;
     color: #ECF0F1;
 }
 
@@ -3408,7 +3408,7 @@ textarea:focus {
 
 .bs-glyphicons li:hover {
     color: #fff;
-    background-color: #1ABB9C
+    background-color: #e51b13
 }
 
 @media (min-width: 768px) {
@@ -3439,7 +3439,7 @@ span.tag {
     float: left;
     padding: 5px 9px;
     text-decoration: none;
-    background: #1ABB9C;
+    background: #e51b13;
     color: #F1F6F7;
     margin-right: 5px;
     font-weight: 500;
@@ -3591,7 +3591,7 @@ ul.timeline li {
 
 .tag {
     line-height: 1;
-    background: #1ABB9C;
+    background: #e51b13;
     color: #fff !important;
 }
 
@@ -3606,7 +3606,7 @@ ul.timeline li {
     pointer-events: none;
     border-top: 14px solid transparent;
     border-bottom: 14px solid transparent;
-    border-left: 11px solid #1ABB9C;
+    border-left: 11px solid #e51b13;
 }
 
 .timeline h2.title {
@@ -3717,7 +3717,7 @@ ul.social li {
 
 .wizard_horizontal ul.wizard_steps li a.done:before,
 .wizard_horizontal ul.wizard_steps li a.done .step_no {
-    background: #1ABB9C;
+    background: #e51b13;
     color: #fff;
 }
 
@@ -3851,7 +3851,7 @@ ul.social li {
 
 .wizard_verticle ul.wizard_steps li a.done:before,
 .wizard_verticle ul.wizard_steps li a.done .step_no {
-    background: #1ABB9C;
+    background: #e51b13;
     color: #fff;
 }
 
@@ -3993,7 +3993,7 @@ html > body > .ui-pnotify {
 }
 
 .btn-success.btn-outline {
-    color: #1ABB9C;
+    color: #e51b13;
     border-width: 2px;
 }
 
@@ -4042,8 +4042,8 @@ html > body > .ui-pnotify {
 .btn-success:active,
 .btn-success.active,
 .open .dropdown-toggle.btn-success {
-    background-color: #1ABB9C;
-    border-color: #1ABB9C;
+    background-color: #e51b13;
+    border-color: #e51b13;
     color: #FFFFFF;
 }
 
@@ -4154,7 +4154,7 @@ social-body {
 }
 
 .chat .status.online {
-    background: #1ABB9C;
+    background: #e51b13;
 }
 
 .chat .status.away {
@@ -4314,7 +4314,7 @@ ul.widget_profile_box li a {
 }
 
 ul.widget_profile_box li a:hover {
-    color: #1ABB9C !important;
+    color: #e51b13 !important;
     border: 1px solid rgba(38, 185, 154, 1);
 }
 
@@ -4590,7 +4590,7 @@ ul.project_files li a i {
 }
 
 .pricing .title {
-    background: #1ABB9C;
+    background: #e51b13;
     height: 110px;
     color: #fff;
     padding: 15px 0 0;
