--- a/deal/WebContent/res/template/css/main/minchanmain.css
+++ b/deal/WebContent/res/template/css/main/minchanmain.css
@@ -5,6 +5,7 @@
 
 .panel { position: relative; overflow: hidden; display: block; border-radius: 0 !important;  }
 .panel-default { border-color: #ebedef !important; }
+.panel-default:hover{ border-color: #D40101 !important; }
 .panel .panel-body { position: relative; padding: 0 !important; overflow: hidden; height: auto; }
 .panel .panel-body a { overflow: hidden; }
 .panel .panel-body a img { display: block; margin: 0; width: 100%; height: auto; 
@@ -68,7 +69,7 @@
 	cursor:pointer;
 }
 #myCarousel .list-group .active {
-	background-color:#eee;	
+	background-color:rgb(26, 130, 195);	
 }
 
 @media (min-width: 992px) { 
