--- a/deal/WebContent/res/template/css/main/minchanmain.css
+++ b/deal/WebContent/res/template/css/main/minchanmain.css
@@ -29,12 +29,12 @@
     filter: alpha(opacity=1);    
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=1)";
 }
-.panel .panel-footer { padding: 8px !important; background-color: #f9f9f9 !important; border-bottom-right-radius: 0 !important; border-bottom-left-radius: 0 !important; }   
+.panel .panel-footer { padding: 8px ; background-color: #FFFFFF !important; border-bottom-right-radius: 0 !important; border-bottom-left-radius: 0 !important; }   
 .panel .panel-footer h4 { display: inline; font: 400 normal 1.125em "Roboto",Arial,Verdana,sans-serif; color: #34495e margin: 0 !important; padding: 0 !important; }
 .panel .panel-footer i.glyphicon { display: inline; font-size: 1.125em; cursor: pointer; }
 .panel .panel-footer i.glyphicon-thumbs-up { color: #1abc9c; }
 .panel .panel-footer i.glyphicon-thumbs-down { color: #e74c3c; padding-left: 5px; }
-.panel .panel-footer div { width: 15px; display: inline; font: 300 normal 1.125em "Roboto",Arial,Verdana,sans-serif; color: #34495e; text-align: center; background-color: transparent !important; border: none !important; }   
+.panel .panel-footer div { width: 15px; display: inline; font: 300 normal 1.125em "Roboto",Arial,Verdana,sans-serif; color: #34495e; text-align: center; background-color: transparent !important;  }   
 
 .modal-title { font: 400 normal 1.625em "Roboto",Arial,Verdana,sans-serif; }
 .modal-footer { font: 400 normal 1.125em "Roboto",Arial,Verdana,sans-serif; } 
@@ -234,7 +234,7 @@ body {
     width: calc(100% - 56px);*/
     width: 100%;
     background-color: rgb(255, 255, 255);
-    border: 1px solid rgb(217, 217, 217);
+    border: 1px solid rgb(0, 0, 0);
     box-shadow: rgba(0, 0, 0, 0.0470588) 0px 1px 0px 0px;
     resize: vertical;
 }
@@ -265,5 +265,10 @@ body {
 }
 
 .panel .panel-footer div {
-width:300px;
+width:100%;
+}
+#replyContent-:focus{
+	
+	border-color:white !important;
+	
 }
